Fix PDF flicker in background of Print Preview

The source PDF flickers in the top left corner of the page behind
Print Preview any time the preview is regenerated. Fix this by not
resizing the PDF's frame in PrintRenderFrameHelper.

Bug: 739973
Change-Id: I5431d291c9c0f65a50a425867cf66295b6225096